// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLink renders 1`] = `
<a
  className="Container-j1xqi2-0 eFunqR"
/>
`;

exports[`TabLink renders Href 1`] = `
<a
  className="Container-j1xqi2-0 eFunqR"
  href="www.google.com"
/>
`;

exports[`TabLink renders count 1`] = `
<a
  className="Container-j1xqi2-0 eFunqR"
>
  <span
    className="TabLink__CountWrapper-u6qu8y-1 cPGFuu"
  >
    2
  </span>
</a>
`;

exports[`TabLink renders element left 1`] = `
<a
  className="Container-j1xqi2-0 eFunqR"
>
  <div
    className="TabLink__ElementLeftWrapper-u6qu8y-0 gaqFqm"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLink renders isTop 1`] = `
<a
  className="Container-j1xqi2-0 gyqgEO"
/>
`;

exports[`TabLink renders size 1`] = `
<a
  className="Container-j1xqi2-0 VICS"
  size="small"
/>
`;
